# opencv-c-

./: CMakeLists.txt  README.md
include/: base64.h  bitOperation.h  eigen.h  faceApplication.h  featureInImage.h  frequencyFilter.h  general.h  grayLevelTransform.h  imageCutting.h  imageOperation.h  linearInterpolation.h  noise.h  opticalCharacterRecognition.h  someSuperApplication.h  spatialFilter.h  transformUsedAffineMatrix.h  wordDetect.h
resources/: 123.jfif  faces.jfif  test.tiff
resources/labelFile/: gyygtl.txt
src/: bitOperation.cpp  eigen.cpp  faceApplication.cpp  featureInImage.cpp  frequencyFilter.cpp  general.cpp  grayLevelTransform.cpp  imageCutting.cpp  imageOperation.cpp  linearInterpolation.cpp  main.cpp  noise.cpp  opticalCharacterRecognition.cpp  someSuperApplication.cpp  spatialFilter.cpp  test.py  transformUsedAffineMatrix.cpp  wordDetect.cpp
